# rust-riccis-bot

./: .gitignore  Cargo.toml  README.md  coins.json
src/: coingecko.rs  main.rs  mod.rs  twelvedata.rs
src/commands/: feedback.rs  mod.rs
