[package]
name = "rust-price-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thousands = "0.2.0"
log = "0.4"
field_accessor = "0"
env_logger = "0.9.0"
url = "2.2.2"
tungstenite = { version = "0.17.3", features = ["native-tls"] }
rand = "0.8.5"
redis = {version = "0.23.2", features = ["json"]}

[dependencies.serenity]
version = "0.11"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

